objects/Project_User_Link__c.object
<CustomObject>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant/Implementation Analyst</fullName>
                </value>
                <value>
                    <fullName>Consulting/Implementation Manager</fullName>
                </value>
                <value>
                    <fullName>Market Manager</fullName>
                </value>
                <value>
                    <fullName>Premier Application Specialist</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager - Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_User_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_User_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Supports many-to-many relationship between Project records (custom) and User records.</description>
    <label>Project User Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Project_User Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project User Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_be_portal_user</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(User__r.UserType, 'High Volume Portal')</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Cannot be portal user</errorMessage>
    </validationRules>
</CustomObject>